fix overflow

--- a/src/component/Container.styl
+++ b/src/component/Container.styl
@@ -3,7 +3,6 @@
     position: relative
     background-position: 0 0
     background-repeat: no-repeat
-    overflow-x: hidden
 
     &-background
         width: 100%
